--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prebuild": "rm -rf dist",
     "test": "NODE_ENV=test jest",
     "release": "release-it",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/utils/** ./src/workflows/**",
     "lint-fix": "eslint ./src/utils/** ./src/workflows/** --fix"
   },
@@ -37,6 +38,7 @@
     "@release-it/keep-a-changelog": "^3.0.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/elliptic": "^6.4.14",
@@ -55,7 +57,6 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
