--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [ '14', '16' ]
+        node: ['14', '16']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -44,6 +44,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Typecheck
+        run: yarn typecheck
 
       - name: Test
         run: yarn test
