--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Immutable Multi-Rollup TypeScript SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "dependencies": {
     "@imtbl/core-sdk": "^1.0.1"
+  },
+  "devDependencies": {
+    "prettier": "2.8.4",
+    "typescript": "^4.9.5"
   }
 }
