--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,12 @@
     "@imtbl/core-sdk": "^1.0.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.36",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
     "prettier": "2.8.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
