--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,15 +1,7 @@
 name: Publish to NPM
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Tag to publish'
-        required: true
-        type: string
+  pull_request:
 
 jobs:
   packages:
