--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "oidc-client-ts": "^2.2.1"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
     "jest": "^29.4.3",
     "prettier": "2.8.4",
