[WT-1128] Update gitignore, add /provider owners to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
 /src/modules/dev-auth/ @immutable/imx-developer-experience
 /src/modules/apis/ @immutable/imx-developer-experience
 /src/modules/passport/ @immutable/imx-passport
+/src/modules/provider @immutable/imx-wallet
