--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts --max-warnings=0"
   },
   "repository": {
     "type": "git",
