--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
