--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/member-delimiter-style": "warn"
+  }
 }
