--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@magic-ext/oidc": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "axios": "^1.3.4",
     "eslint": "^8.34.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
