--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@metamask/detect-provider": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1"
@@ -41,6 +40,11 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
