--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "airbnb"
   ],
   "rules": {
     "@typescript-eslint/member-delimiter-style": "warn"
