--- a/package.json
+++ b/package.json
@@ -1,11 +1,37 @@
 {
-  "name": "ts-immutable-sdk",
+  "name": "@imtbl/sdk",
   "version": "0.0.0",
   "description": "Immutable Multi-Rollup TypeScript SDK",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/base.js",
+    "./starkex": "./dist/starkex.js",
+    "./provider": "./dist/provider.js",
+    "./passport": "./dist/passport.js",
+    "./checkout": "./dist/checkout.js"
+  },
+  "typesVersions": {
+    "*": {
+      "index": [
+        "./dist/base.d.ts"
+      ],
+      "starkex": [
+        "./dist/starkex.d.ts"
+      ],
+      "provider": [
+        "./dist/provider.d.ts"
+      ],
+      "passport": [
+        "./dist/passport.d.ts"
+      ],
+      "checkout": [
+        "./dist/checkout.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -13,7 +39,7 @@
     "node": ">=14.0.0 <17.0.0"
   },
   "scripts": {
-    "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "build": "rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -52,6 +78,7 @@
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
+    "rollup-plugin-dts": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "@types/axios": "^0.14.0"
