--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "esModuleInterop": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
