--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "description": "Immutable Multi-Rollup TypeScript SDK",
   "main": "index.js",
-  "type": "module",
   "engines": {
     "node": ">=14.0.0 <17.0.0"
   },
@@ -27,8 +26,11 @@
     "@imtbl/core-sdk": "^1.0.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "auth0-js": "^9.20.2",
+    "axios": "^1.3.4",
     "eslint": "^8.34.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
@@ -38,6 +40,7 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
+    "@types/auth0-js": "^9.14.7",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
