--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Immutable Multi-Rollup TypeScript SDK",
   "main": "index.js",
+  "type": "module",
   "engines": {
     "node": ">=14.0.0 <17.0.0"
   },
@@ -26,10 +27,8 @@
     "@imtbl/core-sdk": "^1.0.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
-    "auth0-js": "^9.20.2",
     "axios": "^1.3.4",
     "eslint": "^8.34.0",
     "ethers": "^5.7.2",
@@ -40,7 +39,6 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
-    "@types/auth0-js": "^9.14.7",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
@@ -49,6 +47,7 @@
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/axios": "^0.14.0"
   }
 }
