remove experimental decorators as we are no longer using cucumber

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "esModuleInterop": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
