--- a/src/modules/provider/sample-app/.yalc/ts-immutable-sdk/package.json
+++ b/src/modules/provider/sample-app/.yalc/ts-immutable-sdk/package.json
@@ -40,18 +40,5 @@
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1"
   },
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@swc/core": "^1.3.36",
-    "@swc/jest": "^0.2.24",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.2",
-    "eslint": "^8.34.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "prettier": "2.8.4",
-    "rollup": "^3.17.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  }
+  "yalcSig": "e1cb64bf6d0645c49eb3e995c2b37e1e"
 }
