--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,11 @@
     "esModuleInterop": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": ["dom", "es6", "es7", "esnext"],
+    "types": ["node", "jest"],
+    "typeRoots": [ "node_modules/@types", "@types"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/modules/provider/sample-app"]
 }
