--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['14', '16']
+        node: ['14', '16', '18']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
