--- a/src/modules/checkout/package.json
+++ b/src/modules/checkout/package.json
@@ -5,18 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:sdk": "jest packages/sdk",
+    "test:sdk": "cd packages/sdk && jest",
+    "test:cypress": "cd packages/ui/connect && NODE_ENV=test cypress run --component --headless",
+    "test:cypress:open": "cd packages/ui/connect && NODE_ENV=test cypress open --component --browser electron",
     "test:coverage": "jest --coverage",
-    "bootstrap": "npm install && lerna bootstrap --force-local && npm run build:update",
-    "build": "npm run build:sdk && npm run build:ui",
-    "build:update": "npm run build:sdk && npm run build:ui && npm run build:connect:update",
-    "build:sdk": "cd packages/sdk && rm -rf dist && npm run build && npm pack",
-    "build:ui": "npm run build:types && npm run build:lib && npm run build:connect",
-    "build:types": "cd packages/ui/types && rm -rf dist && npm i && npm run build:prod && npm pack",
-    "build:lib": "cd packages/ui/lib && rm -rf dist && npm i && npm run build:prod && npm pack",
-    "build:connect": "cd packages/ui/connect && rm -rf package-lock.json && npm uninstall @imtbl/checkout-sdk-web --no-save && npm uninstall @imtbl/checkout-ui-types --no-save && npm uninstall @imtbl/checkout-ui-lib --no-save && npm i",
-    "build:connect:update": "cd packages/ui/connect && rm -rf dist && npm run build:update",
-    "start": "lerna run --parallel start"
+    "start": "lerna run --parallel start",
+    "bootstrap": "npm install && lerna bootstrap --force-local"
+
   },
   "repository": {
     "type": "git",
@@ -32,11 +27,14 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@cypress/webpack-preprocessor": "^5.17.0",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
     "@types/jest": "^29.4.0",
     "babel-jest": "^29.4.3",
+    "cypress": "^12.7.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "lerna": "^6.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
