--- a/src/modules/checkout/packages/sdk/package.json
+++ b/src/modules/checkout/packages/sdk/package.json
@@ -7,7 +7,9 @@
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test",
+    "test:watch": "jest test --watch",
+    "test:coverage": "jest --coverage",
     "start": "parcel watch",
     "build": "parcel build",
     "build:prod": "NODE_ENV=production parcel build --no-source-maps"
@@ -26,12 +28,19 @@
   },
   "homepage": "https://github.com/immutable/imx-checkout-sdk#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
+    "babel-jest": "^29.5.0",
     "parcel": "^2.8.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@biom3/react": "^0.0.6-alpha"
+    "@biom3/react": "^0.0.6-alpha",
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2",
+    "jest-environment-jsdom": "^29.4.3"
   }
 }
