--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "eslint": "^8.34.0",
@@ -53,7 +54,6 @@
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@types/axios": "^0.14.0"
+    "typescript": "^4.9.5"
   }
 }
