rebase the user registration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
+  "ts-node": {
+    "esm": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "src/modules/provider/sample-app"]
 }
