--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit --jsx preserve",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts --max-warnings=0"
+    "lint": "eslint . --ext .ts,.jsx,.tsx --max-warnings=0"
   },
   "repository": {
     "type": "git",
