--- a/src/modules/checkout/package.json
+++ b/src/modules/checkout/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "test:sdk": "cd packages/sdk && jest",
-    "test:cypress": "cd packages/ui/connect && NODE_ENV=test cypress run --component --headless",
-    "test:cypress:open": "cd packages/ui/connect && NODE_ENV=test cypress open --component --browser electron",
+    "test:cypress": "cd packages/ui && NODE_ENV=test cypress run --component --headless",
+    "test:cypress:open": "cd packages/ui && NODE_ENV=test cypress open --component --browser electron",
     "test:coverage": "jest --coverage",
     "start": "lerna run --parallel start",
     "bootstrap": "npm install && lerna bootstrap --force-local"
