--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "eslint": "^8.34.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
