--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/modules/provider/sample-app"]
+  "exclude": ["node_modules", "dist", "src/modules/provider/sample-app", "src/modules/checkout"]
 }
