typescript-eslint recommended and prettier plugin only

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "@typescript-eslint/member-delimiter-style": "warn"
+    "prettier/prettier": "error"
   }
 }
