--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typecheck": "tsc --noEmit --jsx preserve",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts,.jsx,.tsx --max-warnings=0"
+    "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0"
   },
   "repository": {
     "type": "git",
@@ -33,10 +33,7 @@
     "@imtbl/core-sdk": "^1.0.2-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
     "axios": "^1.3.4",
-    "eslint": "^8.34.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1"
@@ -50,7 +47,10 @@
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "eslint": "^8.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
