--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typecheck": "tsc --noEmit --jsx preserve",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0"
+    "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0",
+    "semistandard": "semistandard | snazzy"
   },
   "repository": {
     "type": "git",
@@ -49,12 +50,13 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
-    "eslint": "^8.36.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
+    "semistandard": "^16.0.1",
+    "snazzy": "^9.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
