--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.36.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
+    "semistandard": "^16.0.1",
     "ts-node": "^10.9.1",
+    "ts-standard": "^12.0.2",
     "typescript": "^4.9.5"
   }
 }
