--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
+  # trunk-ignore(yamllint/empty-values)
   pull_request:
-
+    
+  
 jobs:
   build:
     name: Lint
