--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typecheck": "tsc --noEmit --jsx preserve",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0"
+    "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0",
+    "lint-ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB main | grep  -E \"(.js$|.ts$|.tsx$)\") --ext .ts,.jsx,.tsx --max-warnings=0"
   },
   "repository": {
     "type": "git",
