--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,9 @@
-node_modules
-dist
+node_modules/
+
+# build folders
+dist/
+
+# sample apps
+**/sample-app/**
+
+# put module specific ignore paths here
