Remove ESLint recommended ruleset. Add prettier recommended ruleset.

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "prettier"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
+  "extends": ["plugin:prettier/recommended"],
   "rules": {
     "prettier/prettier": "error"
   }
