--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "lint-staged": "^13.2.0",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
