--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0",
-    "lint-ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB $(git rev-parse HEAD) | grep  -E \"(.js$|.ts$|.tsx$)\") --ext .ts,.jsx,.tsx --max-warnings=0"
+    "lint-ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB $(git rev-parse HEAD) | grep  -E \"(.js$|.ts$|.tsx$)\") --ext .ts,.jsx,.tsx --max-warnings=0",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "lint-staged": "^13.2.0",
