--- a/package.json
+++ b/package.json
@@ -48,10 +48,8 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
-    "@swc/core": "^1.3.36",
-    "@swc/jest": "^0.2.24",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -60,6 +58,7 @@
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
