--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:path": "eslint ./src/ --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB $(git rev-parse HEAD) | grep  -E \"(.js$|.ts$|.tsx$)\") --ext .ts,.jsx,.tsx --max-warnings=0",
+    "lint:path": "eslint --ext .ts,.jsx,.tsx --max-warnings=0",
     "prepare": "husky install"
   },
   "repository": {
