--- a/src/modules/economy/package.json
+++ b/src/modules/economy/package.json
@@ -6,15 +6,20 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.4.11",
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nrwl/cypress": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/rollup": "15.9.2",
+    "@nrwl/vite": "15.9.2",
+    "@nrwl/web": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -23,14 +28,26 @@
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~20.0.3",
+    "lit": "^2.7.0",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.60.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
