--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "prettier": "2.8.4",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typedoc": "^0.23.26",
+    "typedoc-plugin-markdown": "^3.14.0"
   }
 }
