--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,20 +10,24 @@ jobs:
   build:
     name: Lint
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['16']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Read .nvmrc
-        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
-        id: nvm
+      # - name: Read .nvmrc
+      #   run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+      #   id: nvm
 
       - name: Use Node.js ${{ steps.nvm.outputs.NODE_VERSION }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
+          node-version: v16.16.0
           registry-url: https://registry.npmjs.org/
 
       - name: Install yarn
@@ -46,7 +50,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Lint
-        run: yarn lint
+        run: yarn lint:ci
 
-      - name: Typecheck
-        run: yarn typecheck
+      # - name: Typecheck
+      #   run: yarn typecheck
