Fix failing typecheck checks on Github workflows

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -52,5 +52,5 @@ jobs:
       - name: Lint
         run: yarn lint:ci
 
-      # - name: Typecheck
-      #   run: yarn typecheck
+      - name: Typecheck
+        run: yarn typecheck
