--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -7,6 +7,7 @@
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
   "scripts": {
+    "typecheck": "tsc --noEmit",
     "test": "jest test",
     "test:watch": "jest test --watch",
     "test:coverage": "jest --coverage",
