Build before running typecheck

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -48,9 +48,12 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-
+       
       - name: Lint
         run: yarn lint:ci
+
+      - name: Build
+        run: yarn build
 
       - name: Typecheck
         run: yarn typecheck
