Use a single CI workflow since test requires build too

--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -1,4 +1,4 @@
-name: Build, Lint, Typecheck
+name: Build, Lint, Typecheck, Test
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build, Lint, Typecheck
+    name: Build, Lint, Typecheck, Test
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -57,3 +57,6 @@ jobs:
 
       - name: Typecheck
         run: yarn typecheck
+
+      - name: Test
+      run: yarn test
