unified sdk bundle build
and upgraded yarn and fixed the linting commands

--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "scripts": {
     "build": "wsrun -p @imtbl/sdk -r --stages build",
     "build:all": "wsrun --stages build",
-    "test": "wsrun test",
-    "lint": "eslint ./packages/ --ext .ts,.jsx,.tsx --max-warnings=0",
-    "lint:path": "eslint --ext .ts,.jsx,.tsx --max-warnings=0",
-    "lint:ci": "eslint $(git diff --name-only --diff-filter=ACMRTUXB $(git rev-parse HEAD) | grep  -E \"(.js$|.ts$|.tsx$)\") --ext .ts,.jsx,.tsx --max-warnings=0",
-    "prepare": "husky install",
-    "typecheck": "wsrun --exclude-missing --stages typecheck"
+    "test": "wsrun --exclude-missing -e test",
+    "lint": "wsrun --exclude-missing -e lint",
+    "typecheck": "wsrun --exclude-missing typecheck",
+    "postinstall": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint"
@@ -49,5 +47,6 @@
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "wsrun": "^5.2.4"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
