--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -6,6 +6,7 @@
   "main": "dist/main.js",
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
+  "private": true,
   "scripts": {
     "typecheck": "tsc --noEmit",
     "test": "jest test",
@@ -13,7 +14,8 @@
     "test:coverage": "jest --coverage",
     "start": "parcel watch",
     "build": "parcel build",
-    "build:prod": "NODE_ENV=production parcel build --no-source-maps"
+    "build:prod": "NODE_ENV=production parcel build --no-source-maps",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0"
   },
   "repository": {
     "type": "git",
@@ -34,13 +36,14 @@
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
     "babel-jest": "^29.5.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "parcel": "^2.8.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@metamask/detect-provider": "^2.0.0",
-    "ethers": "^5.7.2",
-    "jest-environment-jsdom": "^29.4.3"
+    "ethers": "^5.7.2"
   }
 }
