--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -12,11 +12,10 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
     "typecheck": "tsc --noEmit --jsx preserve",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts,.jsx,.tsx --max-warnings=0"
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "packageList": "yarn workspaces list --json | sed -e ' $ ! s/}/},/' | sed '$ s/$/]/' | sed '1 s/^/[/' > workspace-packages.json"
   },
   "repository": {
     "type": "git",
@@ -30,14 +29,18 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "dependencies": {
     "@imtbl/config": "*",
-    "@imtbl/starkex": "*",
+    "@imtbl/passport": "*",
     "@imtbl/provider": "*",
-    "@imtbl/passport": "*"
+    "@imtbl/starkex": "*",
+    "@rollup/plugin-json": "^6.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
     "eslint": "^8.34.0",
     "rollup": "^3.17.2",
+    "rollup-plugin-dts": "^5.3.0",
     "typescript": "^4.9.5"
   }
 }
