--- a/publish/package.json
+++ b/publish/package.json
@@ -15,7 +15,7 @@
     "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
     "typecheck": "tsc --noEmit --jsx preserve",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
-    "packageList": "yarn workspaces list --json | sed -e ' $ ! s/}/},/' | sed '$ s/$/]/' | sed '1 s/^/[/' > workspace-packages.json"
+    "packageList": "./scripts/generate-package-list.sh"
   },
   "repository": {
     "type": "git",
@@ -27,20 +27,21 @@
     "url": "https://github.com/immutable/ts-immutable-sdk/issues"
   },
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
-  "dependencies": {
+  "devDependencies": {
     "@imtbl/config": "*",
     "@imtbl/passport": "*",
     "@imtbl/provider": "*",
     "@imtbl/starkex": "*",
-    "@rollup/plugin-json": "^6.0.0"
-  },
-  "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@yarnpkg/cli": "3.5.0",
+    "@yarnpkg/core": "3.5.0",
     "eslint": "^8.34.0",
     "rollup": "^3.17.2",
     "rollup-plugin-dts": "^5.3.0",
+    "semver": "^7.4.0",
     "typescript": "^4.9.5"
   }
 }
