--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -1,50 +1,45 @@
 {
   "name": "@imtbl/checkout-sdk-web",
-  "version": "0.0.1",
   "description": "Provides both programatical and user interfaces for interacting with various wallets and L2 networks",
-  "source": "src/index.ts",
-  "main": "dist/main.js",
-  "module": "dist/module.js",
-  "types": "dist/types.d.ts",
-  "private": true,
-  "scripts": {
-    "typecheck": "tsc --noEmit",
-    "test": "jest test",
-    "test:watch": "jest test --watch",
-    "test:coverage": "jest --coverage",
-    "start": "parcel watch",
-    "build": "parcel build",
-    "build:prod": "NODE_ENV=production parcel build --no-source-maps",
-    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/immutable/imx-checkout-sdk.git"
-  },
-  "keywords": [
-    "immutablex"
-  ],
+  "version": "0.0.0",
   "author": "proletesseract",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/immutable/imx-checkout-sdk/issues"
+  "bugs": "https://github.com/immutable/imx-checkout-sdk/issues",
+  "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2"
   },
-  "homepage": "https://github.com/immutable/imx-checkout-sdk#readme",
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
     "babel-jest": "^29.5.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.37.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "parcel": "^2.8.3",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
-    "@metamask/detect-provider": "^2.0.0",
-    "ethers": "^5.7.2"
-  }
+  "homepage": "https://github.com/immutable/imx-checkout-sdk#readme",
+  "keywords": [
+    "immutablex"
+  ],
+  "license": "ISC",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
+  "private": true,
+  "repository": "immutable/imx-checkout-sdk.git",
+  "scripts": {
+    "build": "parcel build",
+    "build:prod": "NODE_ENV=production parcel build --no-source-maps",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "start": "parcel watch",
+    "test": "jest test",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest test --watch",
+    "typecheck": "tsc --noEmit"
+  },
+  "source": "src/index.ts",
+  "types": "dist/types.d.ts"
 }
