--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -1,50 +1,25 @@
 {
   "name": "@imtbl/passport",
-  "version": "0.0.0",
   "description": "Passport module for Immutable SDK",
-  "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "scripts": {
-    "build": "NODE_ENV=production rollup --config rollup.config.js",
-    "typecheck": "tsc --noEmit --jsx preserve",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/immutable/ts-immutable-sdk.git"
-  },
+  "version": "0.0.0",
   "author": "Immutable",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/immutable/ts-immutable-sdk/issues"
-  },
-  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
+  "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@imtbl/core-sdk": "^1.0.2-alpha.5",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "axios": "^1.3.4",
-    "eslint": "^8.34.0",
+    "eslint": "^8.37.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1"
   },
   "devDependencies": {
-    "@imtbl/config": "*",
-    "@imtbl/provider": "*",
-    "@imtbl/toolkit": "*",
+    "@imtbl/config": "0.0.0",
+    "@imtbl/provider": "0.0.0",
+    "@imtbl/toolkit": "0.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
@@ -53,12 +28,32 @@
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "eslint": "^8.34.0",
+    "eslint": "^8.37.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
-    "prettier": "2.8.4",
+    "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "files": [
+    "dist"
+  ],
+  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
+  "license": "Apache-2.0",
+  "main": "dist/index.js",
+  "private": true,
+  "repository": "immutable/ts-immutable-sdk.git",
+  "scripts": {
+    "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "typecheck": "tsc --noEmit --jsx preserve"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts"
 }
