--- a/publish/package.json
+++ b/publish/package.json
@@ -1,65 +1,59 @@
 {
   "name": "@imtbl/sdk",
-  "version": "0.0.0",
   "description": "Immutable Unified SDK",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "scripts": {
-    "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
-    "typecheck": "tsc --noEmit --jsx preserve",
-    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
-    "packageList": "./scripts/generate-package-list.sh",
-    "updateDependencies": "node ./scripts/updateDependencies.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/immutable/ts-immutable-sdk.git"
-  },
+  "version": "0.0.0",
   "author": "Immutable",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/immutable/ts-immutable-sdk/issues"
+  "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
+  "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@imtbl/core-sdk": "^1.0.2-alpha.5",
+    "@magic-ext/oidc": "^1.0.1",
+    "@metamask/detect-provider": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "axios": "^1.3.4",
+    "eslint": "^8.37.0",
+    "ethers": "^5.7.2",
+    "magic-sdk": "^13.3.1",
+    "oidc-client-ts": "^2.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
-  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "devDependencies": {
-    "@imtbl/config": "*",
-    "@imtbl/passport": "*",
-    "@imtbl/provider": "*",
-    "@imtbl/starkex": "*",
+    "@imtbl/config": "0.0.0",
+    "@imtbl/passport": "0.0.0",
+    "@imtbl/provider": "0.0.0",
+    "@imtbl/starkex": "0.0.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
     "@yarnpkg/cli": "3.5.0",
     "@yarnpkg/core": "3.5.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.37.0",
     "rollup": "^3.17.2",
     "rollup-plugin-dts": "^5.3.0",
     "semver": "^7.4.0",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "@ethersproject/providers": "^5.7.2",
-    "@metamask/detect-provider": "^2.0.0",
-    "ethers": "^5.7.2",
-    "@imtbl/core-sdk": "^1.0.2-alpha.5",
-    "@magic-ext/oidc": "^1.0.1",
-    "axios": "^1.3.4",
-    "eslint": "^8.34.0",
-    "magic-sdk": "^13.3.1",
-    "oidc-client-ts": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0"
+  "engines": {
+    "node": ">=14.0.0"
   },
-  "peerDependencies": {}
+  "files": [
+    "dist"
+  ],
+  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
+  "license": "Apache-2.0",
+  "main": "dist/index.js",
+  "repository": "immutable/ts-immutable-sdk.git",
+  "scripts": {
+    "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "packageList": "./scripts/generate-package-list.sh",
+    "typecheck": "tsc --noEmit --jsx preserve",
+    "updateDependencies": "node ./scripts/updateDependencies.js"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts"
 }
