DX-1923: PR feedback

--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -33,5 +33,5 @@ jobs:
       uses: mshick/add-pr-comment@v2
       with:
         message: |
-          Changelog updated detected. Good work!
+          Changelog update detected. Good work!
           
