--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
-    "build": "wsrun -p @imtbl/sdk -e -r --stages build",
+    "build": "wsrun -p @imtbl/sdk -e -r --stages build && yarn syncpack:format",
     "build:all": "wsrun --stages build",
     "lint": "wsrun --exclude-missing -e lint",
     "postinstall": "husky install",
     "syncpack:check": "yarn syncpack list-mismatches",
-    "syncpack:fix": "yarn syncpack fix-mismatches && yarn syncpack format",
+    "syncpack:fix": "yarn syncpack fix-mismatches",
+    "syncpack:format": "yarn syncpack format",
     "test": "wsrun --exclude-missing -e test",
     "typecheck": "wsrun --exclude-missing typecheck"
   },
