--- a/packages/economy/sdk/tsconfig.json
+++ b/packages/economy/sdk/tsconfig.json
@@ -15,7 +15,9 @@
     "esModuleInterop": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["src", "src/types.ts"],
   "exclude": [
