add checkout sdk to playground

--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -10,7 +10,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@imtbl/economy": "workspace:^"
+    "@imtbl/economy": "workspace:^",
+    "@imtbl/checkout-sdk-web": "workspace:^",
+    "@imtbl/checkout-ui-types": "file:../../../.yalc/@imtbl/checkout-ui-types",
+    "@imtbl/checkout-sdk-widgets": "file:../../../.yalc/@imtbl/checkout-sdk-widgets"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.8.3",
