--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -6,6 +6,8 @@
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "dependencies": {
+    "@imtbl/checkout-sdk-web": "workspace:^",
+    "@imtbl/checkout-ui-types": "file:../../../.yalc/@imtbl/checkout-ui-types",
     "@swc/helpers": "~0.5.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
